--- a/src/main/resources/templates/chat/room.html
+++ b/src/main/resources/templates/chat/room.html
@@ -88,7 +88,7 @@
             <h3>Login</h3>
             <form @submit.prevent="login">
                 <div class="form-group">
-                    <input type="text" class="form-control" v-model="loginData.email" placeholder="Email">
+                    <input type="text" class="form-control" v-model="loginData.email" placeholder="바보야">
                 </div>
                 <div class="form-group">
                     <input type="password" class="form-control" v-model="loginData.password" placeholder="Password">
