--- a/src/main/resources/templates/chat/roomdetail.html
+++ b/src/main/resources/templates/chat/roomdetail.html
@@ -29,11 +29,30 @@
         .badge-pill {
             margin-left: 5px;
         }
+        .timestamp {
+            font-size: 12px;
+            color: #999;
+            margin-top: 5px;
+        }
+        /* 메시지 옆에 시간 스타일 */
+        .message-content {
+            display: flex;
+            align-items: center;
+        }
+
+        .message-text {
+            flex: 1;
+        }
+
+        .timestamp {
+            font-size: 10px;
+            color: #ccc;
+        }
 
         /* 기존 스타일 유지하면서 추가될 스타일 */
         .chat-box {
-            max-height: 800px; /* 대화창 최대 높이 조정 */
-            overflow-y: auto; /* 스크롤 생성 */
+            max-height: 500px; /* 채팅창 최대 높이 조정 */
+            overflow-y: scroll; /* 항상 스크롤바 표시 */
             border: 1px solid #ddd;
             padding: 10px;
             background-color: #f7f7f7;
@@ -114,7 +133,7 @@
         </div>
     </div>
     <div class="chat-box">
-        <ul class="list-group">
+        <ul class="list-group" style="max-height: 600px; overflow-y: auto;">
             <li class="list-group-item" v-for="(message, index) in messages.slice(0, 30)" :key="index">
                 <!-- 이미지 메시지인 경우 -->
                 <div v-if="message.type === 'IMAGE'" class="d-flex align-items-center">
@@ -132,11 +151,13 @@
                 <div v-else-if="message.sender === currentUserNickname" class="my-message">
                     <!-- 프로필 이미지와 메시지 내용 표시 -->
                     {{ message.message }}
+                    <span class="timestamp">{{ formatTimestamp(message.timestamp) }}</span>
                     <span class="badge badge-secondary">{{ message.messageId }}</span>
                 </div>
                 <div v-else class="other-message">
                     <!-- 프로필 이미지와 메시지 내용 표시 -->
                     {{ message.sender }} - {{ message.message }}
+                    <span class="timestamp">{{ formatTimestamp(message.timestamp) }}</span>
                     <span class="badge badge-secondary">{{ message.messageId }}</span>
                 </div>
             </li>
@@ -173,12 +194,13 @@
 </div>
 
     <!-- JavaScript -->
-    <script src="/webjars/jquery/3.6.0/jquery.min.js"></script>
-    <script src="/webjars/bootstrap/4.3.1/dist/js/bootstrap.min.js"></script>
+<script src="/webjars/jquery/3.6.0/jquery.min.js"></script>
+<script src="/webjars/bootstrap/4.3.1/dist/js/bootstrap.min.js"></script>
 <script src="/webjars/vue/2.5.16/dist/vue.min.js"></script>
 <script src="/webjars/axios/0.17.1/dist/axios.min.js"></script>
 <script src="/webjars/sockjs-client/1.5.1/sockjs.min.js"></script>
 <script src="/webjars/stomp-websocket/2.3.4/stomp.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/moment@2.29.1/moment.min.js"></script>
 <script>
     // websocket & stomp initialize
     var accessToken = getCookie('accessToken'); // 토큰을 바깥으로 빼냄
@@ -250,7 +272,13 @@
                     console.error('채팅 메시지 불러오기 에러:', error);
                 });
             },
-                sendMessage: function (type, imageUrl) {
+            formatTimestamp: function (timestamp) {
+                const messageTime = moment(timestamp);
+                const formattedTime = messageTime.format('YYYY년 MM월 DD일 A h:mm');
+                return formattedTime;
+            },
+
+            sendMessage: function (type, imageUrl) {
                 if (type === 'TALK' || (type === 'IMAGE' && imageUrl)) {
                     wss.send("/pub/chat/message", {"Authorization": accessToken},
                         JSON.stringify({type: type, roomId: this.roomId, message: this.message, imageUrl: imageUrl}));
