fix_게시글_이미지_수정

--- a/src/main/resources/templates/chat/room.html
+++ b/src/main/resources/templates/chat/room.html
@@ -116,6 +116,7 @@
                 <div class="form-group">
                     <input type="password" class="form-control" v-model="signupData.password" placeholder="Password">
                 </div>
+
                 <!-- 이미지 업로드를 위한 input 추가 -->
                 <div class="form-group">
                     <label for="profileImage" class="btn btn-success btn-block">
@@ -187,7 +188,7 @@
                 nickname: '',
                 phoneNumber: '',
                 username: '',
-                password: ''
+                password: '',
             },
             room_name: '',
             chatrooms: [],
@@ -284,6 +285,8 @@
             signup() {
                 // FormData 객체를 생성하고 데이터 추가
                 const formData = new FormData();
+
+                // JSON 데이터를 직접 추가 (Content-Type: application/json)
                 formData.append('data', JSON.stringify({
                     email: this.signupData.email,
                     nickname: this.signupData.nickname,
@@ -291,8 +294,16 @@
                     username: this.signupData.username,
                     password: this.signupData.password
                 }));
-                formData.append('file', this.signupData.image, this.signupData.image.name); // 이미지 파일 추가
-                axios.post('/auth/signup', formData)
+
+                // 이미지 파일 추가 (자동 처리됨)
+                formData.append('file', this.signupData.image, this.signupData.image.name);
+
+                // axios를 사용하여 POST 요청 보내기
+                axios.post('/auth/signup', formData, {
+                    headers: {
+                        'Content-Type': 'multipart/form-data'
+                    }
+                })
                     .then(response => {
                         alert('회원가입 성공');
                         // 회원가입 성공 시 추가 작업 수행
@@ -302,6 +313,7 @@
                         console.error(error);
                     });
             },
+
 
             findAllRoom:function() {
                 axios.get('/chat/rooms', {
