비밀번호 재설정

--- a/src/main/resources/templates/new_password_template.html
+++ b/src/main/resources/templates/new_password_template.html
@@ -98,7 +98,7 @@
                       width="100%">
                     <div style="text-align:center">
                       <p>
-                        <a th:href="@{http://ec2-3-36-133-133.ap-northeast-2.compute.amazonaws.com:8080/api/auth/newPwChange/{code}(code = ${code})}"
+                        <a th:href="@{https://soubunsoubun.co.kr/findpassword}"
                            style="display:inline-block;padding:14px 20px 11px;text-decoration:none;background-color:#1B5E20;color:#ffffff;text-align:center;font-size:16px;border-radius:3px;border:0"
                            target="_blank">비밀번호 재설정</a>
                       </p>
