fix/채팅방_입장메세지

--- a/src/main/resources/templates/chat/roomdetail.html
+++ b/src/main/resources/templates/chat/roomdetail.html
@@ -322,7 +322,8 @@
                         }
                     }).then(response => {
                         const imageUrl = response.data.data;
-                        this.sendMessage('IMAGE', imageUrl); // 이미지 URL을 함께 보내기
+                        this.sendMessage('I' +
+                            'MAGE', imageUrl); // 이미지 URL을 함께 보내기
 
                         // 이미지 선택 후 미리보기 초기화
                         this.selectedImagePreview = '';
