--- a/src/main/resources/templates/verificationTemplate.html
+++ b/src/main/resources/templates/verificationTemplate.html
@@ -100,8 +100,7 @@
                         <td class="m_-959506477112838652stb-text-box" width="100%"
                             style="padding:0px 10px;line-height:1.8;word-break:break-word;font-size:12px;font-family:AppleSDGothic,apple sd gothic neo,noto sans korean,noto sans korean regular,noto sans cjk kr,noto sans cjk,nanum gothic,malgun gothic,dotum,arial,helvetica,MS Gothic,sans-serif!important;text-align:center;color:#606060">
                             SOBUNSOBUN<br><a href="mailto:kyuni9786@naver.com"
-                                             target="_blank">kyuni9786@sobun.sobun</a><br>경상북도
-                            경주시 소금강로 61번길 53 4층<b></b></td>
+                                             target="_blank">sobunsobunProject@gmail.com</a><br>서울특별시 강남구 역삼동 250-5 4F<b></b></td>
                     </tr>
                     </tbody>
                 </table>
