--- a/src/main/resources/templates/new_password_template.html
+++ b/src/main/resources/templates/new_password_template.html
@@ -97,9 +97,9 @@
                       width="100%">
                     <div style="text-align:center">
                       <p>
-                        <a th:href="@{https://www.sobunsobun.co.kr/}"
+                        <a th:href="@{https://www.sobunsobun.co.kr/signin}"
                            style="display:inline-block;padding:14px 20px 11px;text-decoration:none;background-color:#1B5E20;color:#ffffff;text-align:center;font-size:16px;border-radius:3px;border:0"
-                           target="_blank">웹으로 돌아가기~!</a>
+                           target="_blank">웹으로 돌아가기</a>
                       </p>
                     </div>
                   </td>
